--- a/src/test/resources/a/.env
+++ b/src/test/resources/a/.env
@@ -1,23 +1,41 @@
-# variables accessible both in compose file and in container
-PROJECT_NAME=dummy
-COMPOSE_PROJECT_NAME=${PROJECT_NAME}
-NETWORK_NAME=${PROJECT_NAME}
+# Variables accessible both for subsitution in docker-compose...yml file and as container environment
+# If an env-file has name (say abc.env) its lines won't be available for subsitution in docker-compose...yml file
+
+DUMMY_USER=dummy
+DUMMY_UID=10001
+
+# Container name prefix
+COMPOSE_PROJECT_NAME=${DUMMY_USER}
+
+DEBUG=debug
+
 POSTGRES=postgres
 POSTGRES_IMAGE=${POSTGRES}:15.1-alpine
 POSTGRES_HOST=${POSTGRES}
 POSTGRES_MEMORY_LIMIT=100m
-POSTGRES_DB=${PROJECT_NAME}
-POSTGRES_USER=${PROJECT_NAME}
-POSTGRES_PASSWORD=${PROJECT_NAME}
-PGUSER=${PROJECT_NAME}
+POSTGRES_DB=${POSTGRES}
+POSTGRES_USER=${POSTGRES}
+POSTGRES_PASSWORD=${POSTGRES}
+PGUSER=${POSTGRES}
 POSTGRES_HEALTHCHECK_CMD=pg_isready -d ${POSTGRES_DB} -U ${PGUSER}
+
 PGADMIN=pgadmin4
 PGADMIN_IMAGE=dpage/${PGADMIN}:6.18
 PGADMIN_HOST=${PGADMIN}
 PGADMIN_MEMORY_LIMIT=200m
-PGADMIN_DEFAULT_EMAIL=${PROJECT_NAME}@${PROJECT_NAME}.${PROJECT_NAME}
-PGADMIN_DEFAULT_PASSWORD=${PROJECT_NAME}
+PGADMIN_DEFAULT_EMAIL=dummy@dummy.dummy
+PGADMIN_DEFAULT_PASSWORD=${COMPOSE_PROJECT_NAME}
 THIS_HOST_ON_THIS_NETWORK=0.0.0.0
 PGADMIN_LISTEN_PORT=5050
 PGADMIN_HEALTHCHECK_CMD=wget -O - http://${THIS_HOST_ON_THIS_NETWORK}:${PGADMIN_LISTEN_PORT}/misc/ping
-DEBUG=debug
+
+ADMINER_IMAGE=adminer:4.8.1-standalone
+ADMINER_HOST=adminer
+ADMINER_MEMORY_LIMIT=32m
+ADMINER_DEFAULT_SERVER=postgres
+
+ALPINE_IMAGE=alpine:3.12
+ALPINE_HOST=alpine-shell
+
+CENTOS_IMAGE=centos:7
+CENTOS_HOST=centos-shell
