--- a/src/test/resources/b/docker-compose-pgadmin.yml
+++ b/src/test/resources/b/docker-compose-pgadmin.yml
@@ -1,8 +1,7 @@
 version: '3.8'
 
 networks:
-  default:
-    name: ${NETWORK_NAME}
+  multiple-compose:
 
 services:
   pgadmin:
@@ -13,6 +12,8 @@ services:
       resources:
         limits:
           memory: ${PGADMIN_MEMORY_LIMIT}
+    networks:
+      - multiple-compose
     ports:
       - '5050:5050'
     healthcheck:
